--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -8,7 +8,7 @@
  */
 
 :root {
-  --primary: #00D9A5;
+  --primary: #ff0a0a;
   --accent: #FF3D85;
   --secondary: #4E5AFE;
   --warning: #EED818;
@@ -141,7 +141,7 @@ a.bg-dark:hover, a.bg-dark:focus {
 }
 
 .text-primary {
-  color: #00D9A5 !important;
+  color: #ff0a0a !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -264,7 +264,7 @@ a.text-dark:hover, a.text-dark:focus {
 /* Buttons */
 .btn-primary {
   color: #fff;
-  background-color: #00D9A5;
+  background-color: #07be94;
   border-color: transparent;
 }
 
